--- a/2019/uw_knn/neuron_excitaility_model.ipynb
+++ b/2019/uw_knn/neuron_excitaility_model.ipynb
@@ -9,6 +9,8 @@
    "source": [
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jsnowacki/slides/blob/master/2019/uw_knn/neuron_excitaility_model.ipynb)\n",
     "\n",
+    "<a href=\"https://colab.research.google.com/github/jsnowacki/slides/blob/master/2019/uw_knn/neuron_excitaility_model.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>\n",
+    "\n",
     "# Neural excitability model\n",
     "\n",
     "The below example is a set of experiments with model given in the paper: J Nowacki, HM Osinga, JT Brown, AD Randall, K Tsaneva-Atanasova _A unified model of CA1/3 pyramidal cells: an investigation into excitability_, Progress in biophysics and molecular biology 105 (1-2), 34-48, https://doi.org/10.1016/j.pbiomolbio.2010.09.020. \n",
