Paper ref fixed

--- a/2019/uw_knn/neuron_excitaility_model.ipynb
+++ b/2019/uw_knn/neuron_excitaility_model.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "# Neural excitability model\n",
     "\n",
-    "The below example is a set of experiments with model given in the paper: J Nowacki, HM Osinga, JT Brown, AD Randall, K Tsaneva-Atanasova _A unified model of CA1/3 pyramidal cells: an investigation into excitability_, Progress in biophysics and molecular biology 105 (1-2), 34-48, https://doi.org/10.1016/j.pbiomolbio.2010.09.020. \n",
+    "The below example is a set of experiments with model given in the paper: J Nowacki, HM Osinga, K Tsaneva-Atanasova, _Dynamical systems analysis of spike-adding mechanisms in transient bursts\n",
+    "\n",
+    "The Journal of Mathematical Neuroscience 2 (1), 7 J Nowacki, HM Osinga, JT Brown, AD Randall, K Tsaneva-Atanasova _A unified model of CA1/3 pyramidal cells: an investigation into excitability_, Progress in biophysics and molecular biology 105 (1-2), 34-48, https://doi.org/10.1016/j.pbiomolbio.2010.09.020. \n",
     "\n",
     "First install some requirements:"
    ]
